Changed to use relevant_interactions/significant_means to filter interacting pairs that are shown in cci_search plot; fixed certain more obscure scenarios of sorting interacting pairs alphabetically; fixed user selection of genes in cci_search to work with sorting of interacting pairs

--- a/data/endometrium_cpdbv4_stat/config.yml
+++ b/data/endometrium_cpdbv4_stat/config.yml
@@ -4,6 +4,7 @@ title:                      Endometrial Atlas - CellphoneDB statistical analysis
 celltype_composition:       celltype_composition.tsv
 microenvironments:          microenvironments.tsv
 deconvoluted_result:        statistical_analysis_deconvoluted_05_03_2023_194803.txt
-significant_means:          statistical_analysis_significant_means_05_03_2023_194803.txt
+analysis_means:             statistical_analysis_means_05_03_2023_194803.txt
+relevant_interactions:      statistical_analysis_significant_means_05_03_2023_194803.txt
 pvalues:                    statistical_analysis_pvalues_05_03_2023_194803.txt
 deconvoluted_percents:      statistical_analysis_deconvoluted_percents_05_03_2023_194803.txt
