--- a/data/harmonized_endometrial_atlas/config.yml
+++ b/data/harmonized_endometrial_atlas/config.yml
@@ -3,7 +3,7 @@ separator:                  '|'
 title:                      Harmonized Endometrial Atlas - CellphoneDB DEG analysis results
 microenvironments:          microenvironments.tsv
 deconvoluted_result:        degs_analysis_deconvoluted_result_06_12_2023_111157.txt 
-significant_means:          degs_analysis_means_result_06_12_2023_111157.txt 
+analysis_means:             degs_analysis_means_result_06_12_2023_111157.txt
 relevant_interactions:      degs_analysis_relevant_interactions_result_06_12_2023_111157.txt 
 degs:                       DEGs_upregulated_genes.tsv
 deconvoluted_percents:      degs_analysis_deconvoluted_percents_06_12_2023_111157.txt
