--- a/data/ref_calvanese_agm/config.yml
+++ b/data/ref_calvanese_agm/config.yml
@@ -2,5 +2,6 @@
 separator:                  '|'
 title:                      ref_Calvanese_AGM - Analysis_SJK
 deconvoluted_result:        statistical_analysis_deconvoluted_05_01_2023_22:52:51.txt
-significant_means:          statistical_analysis_significant_means_05_01_2023_22:52:51.txt
+analysis_means:             statistical_analysis_means_05_01_2023_22:52:51.txt
+relevant_interactions:      statistical_analysis_significant_means_05_01_2023_22:52:51.txt
 pvalues:                    statistical_analysis_pvalues_05_01_2023_22:52:51.txt
