cci_search plot: Added more complete interacting pair information display (via side-navs) - when cellphonedb database was provided in config

--- a/data/endometrium_cpdbv4_stat/config.yml
+++ b/data/endometrium_cpdbv4_stat/config.yml
@@ -8,3 +8,4 @@ analysis_means:             statistical_analysis_means_05_03_2023_194803.txt
 relevant_interactions:      statistical_analysis_significant_means_05_03_2023_194803.txt
 pvalues:                    statistical_analysis_pvalues_05_03_2023_194803.txt
 deconvoluted_percents:      statistical_analysis_deconvoluted_percents_05_03_2023_194803.txt
+cellphonedb:                cellphonedb.zip
