--- a/data/endometrium_cpdbv4_deg/config.yml
+++ b/data/endometrium_cpdbv4_deg/config.yml
@@ -8,4 +8,4 @@ analysis_means:             degs_analysis_means_result_05_03_2023_193908.txt
 relevant_interactions:      degs_analysis_relevant_interactions_result_05_03_2023_193908.txt
 degs:                       degs_in_epithelials.tsv
 deconvoluted_percents:      degs_analysis_deconvoluted_percents_05_03_2023_193908.txt
-
+cellphonedb:                cellphonedb.zip
