--- a/data/endothelial_mural/config.yml
+++ b/data/endothelial_mural/config.yml
@@ -6,3 +6,4 @@ analysis_means:             statistical_analysis_means_06_07_2023_15_19_27.txt
 relevant_interactions:      statistical_analysis_significant_means_06_07_2023_15_19_27.txt
 pvalues:                    statistical_analysis_pvalues_06_07_2023_15_19_27.txt
 hash:                       slkRTXkW6Dhg-xZ0rRuuag
+cellphonedb:                cellphonedb.zip
