--- a/data/harmonized_endometrial_atlas/config.yml
+++ b/data/harmonized_endometrial_atlas/config.yml
@@ -7,4 +7,5 @@ analysis_means:             degs_analysis_means_result_06_12_2023_111157.txt
 relevant_interactions:      degs_analysis_relevant_interactions_result_06_12_2023_111157.txt 
 degs:                       DEGs_upregulated_genes.tsv
 deconvoluted_percents:      degs_analysis_deconvoluted_percents_06_12_2023_111157.txt
+cellphonedb:                cellphonedb.zip
 
