--- a/data/harmonized_endometrial_atlas/config.yml
+++ b/data/harmonized_endometrial_atlas/config.yml
@@ -9,4 +9,5 @@ relevant_interactions:      degs_analysis_relevant_interactions_result_07_05_202
 degs:                       DEGs_upregulated_genes.tsv
 deconvoluted_percents:      degs_analysis_deconvoluted_percents_07_05_2023_112635.txt
 cellphonedb:                cellphonedb.zip
+hash:                       7xWkX47Qatox6dikwb-TgA
 
