Added a hash value as a demonstration of private access

--- a/data/endometrium_cpdbv5_deg/config.yml
+++ b/data/endometrium_cpdbv5_deg/config.yml
@@ -9,4 +9,5 @@ relevant_interactions:      degs_analysis_relevant_interactions_08_14_2023_11123
 degs:                       degs_in_epithelials.tsv
 deconvoluted_percents:      degs_analysis_deconvoluted_percents_08_14_2023_111234.txt
 interaction_scores:         degs_analysis_interaction_scores_08_14_2023_111234.txt
+hash:                       u09AAPT-Evv4royBk1myzg
 cellphonedb:                cellphonedb.zip
